Fix tiny points.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,19 +5,14 @@
     android:orientation="vertical"
     tools:context="hotchemi.myapplication.MainFragment">
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/edittext"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <EditText
-            android:id="@+id/edittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_margin="@dimen/default_margin"
-            android:text="http://private-5d9af-dicetest.apiary-mock.com/events" />
-    </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_margin="@dimen/default_margin"
+        android:layout_weight="1"
+        android:text="http://private-5d9af-dicetest.apiary-mock.com/events" />
 
     <Button
         android:id="@+id/button"
