--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,5 @@
     android:id="@+id/container"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
-</FrameLayout>
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" />
